[tool.poetry]
name = "eurostar-watcher"
version = "0.1.0"
description = ""
authors = ["migchez <adrienconrath@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.0"
beautifulsoup4 = "4.12.2"
requests = "^2.31.0"
fire = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
